# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\HomePageController;
 use App\Http\Controllers\IngredientController;
 use App\Http\Middleware\AdminOnly;
 use Illuminate\Http\Request;
@@ -10,8 +11,15 @@ Route::get('/user', function (Request $request) {
     return $request->user();
 })->middleware('auth:sanctum');
 
+// Homepage routes
+Route::middleware('auth:sanctum')->group(function () {
+    Route::get('/home/meals/matched', [HomePageController::class, 'matchedMeals']);
+});
+
+Route::get('/home/meals/types', [HomePageController::class, 'dietTypesMeals']);
 
 Route::get('meals/diet-types', [\App\Http\Controllers\MealController::class, 'dietTypes']);
+Route::post('meals/search', [\App\Http\Controllers\MealController::class, 'search']);
 Route::apiResource('meals', \App\Http\Controllers\MealController::class)->only(['index' , 'show']);
 Route::get('/ingredients' , [IngredientController::class , 'index']);
 
@@ -38,4 +46,5 @@ Route::middleware(AdminOnly::class)->group(function(){
 
 Route::post('/login' , [AuthController::class , 'login']);
 Route::post('/register' , [AuthController::class , 'register']);
-Route::post('/logout' , [AuthController::class , 'logout']);
+Route::post('/logout' , [AuthController::class , 'logout'])->middleware('auth:sanctum');
+Route::post('/self' , [AuthController::class , 'self'])->middleware('auth:sanctum');
